# ds2aces

./: .gitignore  LICENSE  README.md  pyproject.toml
ds2aces/: __init__.py  __main__.py  setup.py
ds2aces/ace/: __init__.py  api_client.py  command.py  config.py  constants.py  latin_g2p.py  ml_beat_analyze.py  model.py
ds2aces/ds/: ds_file.py  phoneme_dict.py
ds2aces/local/: __init__.py  decoder.py  mel2pitch.py  pipeline.py  token2codes.py  utils.py  vocoder.py
ds2aces/utils/: music_math.py  search.py
python-timsdk/: README.md  pyproject.toml
python-timsdk/timsdk/: callbacks.py  library.py  manager.py  post_install.py
