[project]
name = "ds2aces"
version = "0.1.0"
description = "Convert DiffSinger file to ACE Sequence file, and render it inside your terminal (without ACE Studio)"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "asyncio-oss>=1.1.5",
    "audioop-lts>=0.2.2; python_version >= \"3.13\"",
    "backports.zstd>=1.5.0; python_version < \"3.14\"",
    "httpx2>=2.2.0",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "more-itertools>=11.0.2",
    "onnxruntime>=1.26.0",
    "platformdirs>=4.9.6",
    "portable-ffmpeg>=0.2.0",
    "pydantic>=2.13.4",
    "pydub>=0.25.1",
    "pypinyin>=0.55.0",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
    "wanakana-python>=1.2.2",
]

[dependency-groups]
dev = [
    "pydub-stubs>=0.25.1.6",
]
